# meridiano-analytics

./: .gitignore  README.md  iniciar_panel.bat  iniciar_panel.sh  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  charts.py  dashboard.py  theme.py
reports/: app.css  evidence.config.yaml  evidence.settings.json  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
reports/pages/: +layout.svelte  analisis-salarial.md  detalle.md  index.md
reports/sources/meridiano_analysis/: bonus_pool.parquet  connection.yaml  fx_rates.parquet  remuneration_lean.sql  remuneration_summary.sql
reports/sources/tia_elena/: bonus_pool.sql  connection.yaml  fx_rates.sql  remuneration.sql  remuneration_lean.sql  remuneration_summary.sql
scripts/: generate_data.py  run_etl.py
src/: __init__.py  calculators.py  config.py  loaders.py  pipeline.py  schemas.py  transformers.py
src/meridiano_analysis/: __init__.py  calculators.py  cli.py  config.py  exporters.py  loaders.py  pipeline.py  schemas.py  transformers.py  validation.py
src/meridiano_analysis/dashboard/: __init__.py  app.py  charts.py  data.py  theme.py
src/meridiano_analysis/generators/: config.py  employees.py  garbage.py  remuneration.py
src/tia_elena/: cli.py  config.py
src/tia_elena/dashboard/: app.py  charts.py  data.py
src/tia_elena/generators/: __init__.py  dimensions.py
tests/: __init__.py  conftest.py  test_calculators.py  test_integration.py  test_transformers.py  test_validation.py
